# pysatCDAAC

./: .readthedocs.yml  .travis.yml  .zenodo.json  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt
.github/: pull_request_template.md
.github/workflows/: docs.yml  main.yml  patch.yml  pip_rc_install.yml  pysat_rc.yml
docs/: Makefile  citing.rst  conf.py  examples.rst  index.rst  installation.rst  overview.rst  requirements.txt  supported_instruments.rst
docs/examples/: ex_init.rst
pysatCDAAC/: __init__.py
pysatCDAAC/constellations/: cosmic2ivm.py
pysatCDAAC/instruments/: __init__.py  cosmic2_ivm.py  cosmic_gps.py
pysatCDAAC/instruments/methods/: __init__.py  general.py
pysatCDAAC/tests/: __init__.py  test_instruments.py
