[metadata]
name = pysatCDAAC
version = file: pysatCDAAC/version.txt
url = https://github.com/pysat/pysatCDAAC
author = Jeff Klenzing
author_email = pysat.developers@gmail.com
description = 'pysat support for CDAAC instruments'
keywords =
  pysat
  ionosphere
  cosmic
  radio occultation
classifiers =
  Development Status :: 3 - Alpha
  Topic :: Scientific/Engineering :: Physics
  Topic :: Scientific/Engineering :: Atmospheric Science
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Operating System :: MacOS :: MacOS X
  Operating System :: POSIX :: Linux
  Operating System :: Microsoft :: Windows
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.5
setup_requires =
  setuptools >= 38.6
  pip >= 10
include_package_data = True
zip_safe = False
packages = find:
install_requires =
  netCDF4
  numpy
  pandas
  pysat
  requests

[coverage:report]

[flake8]
max-line-length = 80
ignore =
  D200
  D202
  W503

[tool:pytest]
markers =
    all_inst: tests all instruments
    download: tests for downloadable instruments
    load_options: tests for instruments with additional options
    no_download: tests for instruments without download support
    load_options: tests for instruments with additional options
    first: first tests to run
    second: second tests to run
